--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <link rel="stylesheet" href="asset/css/style.css">
-    <title>Vue js</title>
+    <title>Vue todolist</title>
 </head>
 
 <body>
