--- a/index.html
+++ b/index.html
@@ -15,7 +15,34 @@
 </head>
 
 <body>
-    <div id="app">
+    <div id="app" class="container">
+        <div class="images">
+            <img src="/asset/img/logo.png" alt="">
+        </div>
+        <div class="input">
+            <input type="text">
+            <button>click</button>
+        </div>
+        <div class="todoList">
+            <ul>
+                <li>
+                    todo
+                    <i class="fas fa-times"></i>
+                </li>
+                <li>
+                    todo
+                    <i class="fas fa-times"></i>
+                </li>
+                <li>
+
+                </li>
+                <li>
+
+                </li>
+            </ul>
+
+        </div>
+
 
 
     </div>
