--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
 
 <body>
     <div id="app" class="container">
-        <div class="images">
-            <img src="/asset/img/logo.png" alt="">
+        <div class="logo">
+            <img src="asset/img/logo.png" alt="">
         </div>
-        <div class="input">
+        <div class="new-todo">
+            <h4>
+                attenzione inserire un testo più lungo!!
+            </h4>
             <input type="text">
-            <button>click</button>
+            <button>aggiungi</button>
         </div>
+
         <div class="todoList">
             <ul>
                 <li>
