agganciato class fas in consol log con funzione

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                     {{todo.todo}}
 
-                    <i class="fas fa-times"></i>
+                    <i @click="removeTodo" class="fas fa-times"></i>
                 </li>
 
             </ul>
