--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 attenzione inserire un testo più lungo!!
             </h4>
             <input type="text" v-model="strTodo" placeholder="Nuovo Todo">
-            <button>aggiungi</button>
+            <button @click="addTodo">aggiungi</button>
         </div>
 
         <div class="todoList">
